# gdrive-oneway-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.json  config.json.template  install.bat
.github/workflows/: ci.yml  release.yml
gdrive_configurator/: Cargo.toml  build.rs
gdrive_configurator/src/: main.rs  windows.rc
gdrive_configurator/ui/: app.slint
src/: file_logger.rs  gdrive_sync.rs  main.rs
