[package]
name = "gdrive_configurator"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.5", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"

[build-dependencies]
slint-build = "1.5"
embed-resource = "2.2"

[env]
SLINT_RENDERER = "femtovg"